Manual generator matching

--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -4,9 +4,12 @@ io = analysis/water-coordinate-io
 [inputs]
 matpowercase = inputs/synthetic_grid/case.mat
 geninfo = inputs/synthetic_grid/gen_info.csv
+gen_matches = inputs/manual_gen_matching/gen_matches.csv
 
 [outputs]
 case = outputs/synthetic_grid/case.p
+case_match = outputs/synthetic_grid/case_match.p
+
 
 [MANUAL FILES]
 gen_matches = manual_files/gen_matches.csv
