--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -5,10 +5,12 @@ io = analysis/water-coordinate-io
 matpowercase = inputs/synthetic_grid/case.mat
 geninfo = inputs/synthetic_grid/gen_info.csv
 gen_matches = inputs/manual_gen_matching/gen_matches.csv
+eia_raw = inputs/eia_thermoelectric_water_use
 
 [outputs]
 case = outputs/synthetic_grid/case.p
 case_match = outputs/synthetic_grid/case_match.p
+eia = outputs/eia_thermoelectric_water_use/EIA.h5
 
 
 [MANUAL FILES]
