--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -11,3 +11,4 @@ eia_raw = inputs/eia_thermoelectric_water_use
 case = outputs/synthetic_grid/case.p
 case_match = outputs/synthetic_grid/case_match.p
 eia = outputs/eia_thermoelectric_water_use/EIA.h5
+gen_info_water = outputs/synthetic_grid/gen_info_water.csv
