--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -6,6 +6,7 @@ matpowercase = inputs/synthetic_grid/case.mat
 geninfo = inputs/synthetic_grid/gen_info.csv
 gen_matches = inputs/manual_gen_matching/gen_matches.csv
 eia_raw = inputs/eia_thermoelectric_water_use
+eia_heat_rates = inputs/eia_heat_rates/Table_A6_Approximate_Heat_Rates_for_Electricity_-_and_Heat_Content_of_Electricity.xlsx
 
 [outputs]
 case = outputs/synthetic_grid/case.p
