Save generated figures

--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -14,3 +14,5 @@ case_match = outputs/synthetic_grid/case_match.p
 eia = outputs/eia_thermoelectric_water_use/EIA.h5
 eia_region = outputs/eia_thermoelectric_water_use/eia_region.csv
 gen_info_water = outputs/synthetic_grid/gen_info_water.csv
+oc_sensitivity = outputs/figures/oc_sensitivity.pdf
+rc_sensitivity = outputs/figures/rc_sensitivity.pdf
