Temperature data plot

--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -4,6 +4,8 @@ geninfo = analysis/io/inputs/synthetic_grid/gen_info.csv
 gen_matches = analysis/io/inputs/manual_gen_matching/gen_matches.csv
 eia_raw = analysis/io/inputs/eia_thermoelectric_water_use
 eia_heat_rates = analysis/io/inputs/eia_heat_rates/Table_A6_Approximate_Heat_Rates_for_Electricity_-_and_Heat_Content_of_Electricity.xlsx
+noaa_temperature_data = analysis/io/inputs/noaa_air_temperature/CRNH0203-2019-IL_Champaign_9_SW.txt
+noaa_temperature_headers = analysis/io/inputs/noaa_air_temperature/headers.txt
 
 [outputs]
 case = analysis/io/outputs/synthetic_grid/case.p
@@ -13,3 +15,4 @@ eia_region = analysis/io/outputs/eia_thermoelectric_water_use/eia_region.csv
 gen_info_water = analysis/io/outputs/synthetic_grid/gen_info_water.csv
 oc_sensitivity = analysis/io/outputs/figures/oc_sensitivity.pdf
 rc_sensitivity = analysis/io/outputs/figures/rc_sensitivity.pdf
+raw_temperature = analysis/io/outputs/figures/raw_temperature.pdf
