--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -6,6 +6,7 @@ eia_raw = analysis/io/inputs/eia_thermoelectric_water_use
 eia_heat_rates = analysis/io/inputs/eia_heat_rates/Table_A6_Approximate_Heat_Rates_for_Electricity_-_and_Heat_Content_of_Electricity.xlsx
 noaa_temperature_data = analysis/io/inputs/noaa_air_temperature/CRNH0203-2019-IL_Champaign_9_SW.txt
 noaa_temperature_headers = analysis/io/inputs/noaa_air_temperature/headers.txt
+usgs_temperature_data = analysis/io/inputs/usgs_water_temperature/05558300.txt
 
 [outputs]
 case = analysis/io/outputs/synthetic_grid/case.p
@@ -15,4 +16,4 @@ eia_region = analysis/io/outputs/eia_thermoelectric_water_use/eia_region.csv
 gen_info_water = analysis/io/outputs/synthetic_grid/gen_info_water.csv
 oc_sensitivity = analysis/io/outputs/figures/oc_sensitivity.pdf
 rc_sensitivity = analysis/io/outputs/figures/rc_sensitivity.pdf
-raw_temperature = analysis/io/outputs/figures/raw_temperature.pdf
+raw_exogenous = analysis/io/outputs/figures/raw_exogenous.pdf
