--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -17,3 +17,4 @@ gen_info_water = analysis/io/outputs/synthetic_grid/gen_info_water.csv
 oc_sensitivity = analysis/io/outputs/figures/oc_sensitivity.pdf
 rc_sensitivity = analysis/io/outputs/figures/rc_sensitivity.pdf
 raw_exogenous = analysis/io/outputs/figures/raw_exogenous.pdf
+water_use = analysis/io/outputs/simulation/water_use.csv
