Time-series simulation plots

--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -18,3 +18,5 @@ oc_sensitivity = analysis/io/outputs/figures/oc_sensitivity.pdf
 rc_sensitivity = analysis/io/outputs/figures/rc_sensitivity.pdf
 raw_exogenous = analysis/io/outputs/figures/raw_exogenous.pdf
 water_use = analysis/io/outputs/simulation/water_use.csv
+with_timeseries = analysis/io/outputs/figures/with_timeseries.pdf
+con_timeseries = analysis/io/outputs/figures/con_timeseries.pdf
