Create plot of loads

--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -20,3 +20,5 @@ raw_exogenous = analysis/io/outputs/figures/raw_exogenous.pdf
 water_use = analysis/io/outputs/simulation/water_use.csv
 with_timeseries = analysis/io/outputs/figures/with_timeseries.pdf
 con_timeseries = analysis/io/outputs/figures/con_timeseries.pdf
+df_load = analysis/io/outputs/power_system/loads.csv
+loads = analysis/io/outputs/figures/loads.pdf
