No ramp rate case visualization

--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -22,3 +22,6 @@ with_timeseries = analysis/io/outputs/figures/with_timeseries.pdf
 con_timeseries = analysis/io/outputs/figures/con_timeseries.pdf
 df_load = analysis/io/outputs/power_system/loads.csv
 loads = analysis/io/outputs/figures/loads.pdf
+df_gen_noramp = analysis/io/outputs/power_system/df_gen_noramp.csv
+df_gen_pminfo = analysis/io/outputs/power_system/df_gen_pminfo.csv
+gen_noramp = analysis/io/outputs/figures/gen_noramp.pdf
