Generator ramping constraints plots

--- a/analysis/config.ini
+++ b/analysis/config.ini
@@ -25,3 +25,5 @@ loads = analysis/io/outputs/figures/loads.pdf
 df_gen_noramp = analysis/io/outputs/power_system/df_gen_noramp.csv
 df_gen_pminfo = analysis/io/outputs/power_system/df_gen_pminfo.csv
 gen_noramp = analysis/io/outputs/figures/gen_noramp.pdf
+gen_ramp = analysis/io/outputs/figures/gen_ramp.pdf
+df_gen_ramp = analysis/io/outputs/power_system/df_gen_ramp.csv
