--- a/analysis/julia_env/Project.toml
+++ b/analysis/julia_env/Project.toml
@@ -5,3 +5,4 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 WaterPowerModels = "69a00cc1-8540-4ac5-8cc4-11d77e61fcbd"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
