--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -12,11 +12,10 @@ outputs:
   case: "analysis/io/outputs/synthetic_grid/case.p"
   case_match: "analysis/io/outputs/synthetic_grid/case_match.p"
   eia: "analysis/io/outputs/eia_thermoelectric_water_use/EIA.h5"
-  eia_region: "analysis/io/outputs/eia_thermoelectric_water_use/eia_region.csv"
   gen_info_water: "analysis/io/outputs/synthetic_grid/gen_info_water.csv"
-  oc_sensitivity: "analysis/io/outputs/figures/oc_sensitivity.pdf"
-  rc_sensitivity: "analysis/io/outputs/figures/rc_sensitivity.pdf"
-  raw_exogenous: "analysis/io/outputs/figures/raw_exogenous.pdf"
+  df_air_water: "analysis/io/outputs/exogenous/air_water.csv"
+  temperatures: "analysis/io/outputs/figures/temperatures.pdf"
+  
   water_use: "analysis/io/outputs/simulation/water_use.csv"
   with_timeseries: "analysis/io/outputs/figures/with_timeseries.pdf"
   con_timeseries: "analysis/io/outputs/figures/con_timeseries.pdf"
