--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -18,7 +18,8 @@ outputs:
   temperatures: "analysis/io/outputs/figures/temperatures.pdf"
   df_system_load: "analysis/io/outputs/exogenous/system_load.csv"
   system_load: "analysis/io/outputs/figures/system_load.pdf"
-  
+  df_node_load: "analysis/io/outputs/exogenous/node_load.csv"
+
   water_use: "analysis/io/outputs/simulation/water_use.csv"
   with_timeseries: "analysis/io/outputs/figures/with_timeseries.pdf"
   con_timeseries: "analysis/io/outputs/figures/con_timeseries.pdf"
