--- a/analysis/julia_env/Project.toml
+++ b/analysis/julia_env/Project.toml
@@ -1,7 +1,11 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 WaterPowerModels = "69a00cc1-8540-4ac5-8cc4-11d77e61fcbd"
