Analysis with varying loads

--- a/analysis/julia_env/Project.toml
+++ b/analysis/julia_env/Project.toml
@@ -8,5 +8,6 @@ JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 WaterPowerModels = "69a00cc1-8540-4ac5-8cc4-11d77e61fcbd"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
