--- a/src/julia/WaterPowerModels/Project.toml
+++ b/src/julia/WaterPowerModels/Project.toml
@@ -5,5 +5,6 @@ version = "0.0.0"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
