--- a/src/julia/WaterPowerModels/Project.toml
+++ b/src/julia/WaterPowerModels/Project.toml
@@ -4,8 +4,11 @@ authors = ["kravitsjacob <kravitsjacob@gmail.com>"]
 version = "0.0.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+ExcelFiles = "89b67f3b-d1aa-5f6f-9ca4-282e8d98620d"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
