--- a/src/julia/MOCOT/Project.toml
+++ b/src/julia/MOCOT/Project.toml
@@ -1,3 +1,8 @@
+name = "MOCOT"
+uuid = "5c3fdc54-6994-4d60-92ef-82aee31cdcaf"
+authors = ["kravitsjacob <kravitsjacob@gmail.com>"]
+version = "0.0.0"
+
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
