--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -1,31 +1,29 @@
 inputs:
   case: "analysis/io/inputs/ACTIVSg200/case_ACTIVSg200.m"
-  gen_info: "analysis/io/inputs/from_previous_study/gen_info.csv"
-  gen_matches: "analysis/io/inputs/from_previous_study/gen_matches.csv"
+  gen_info_matpower: "analysis/io/inputs/from_previous_study/gen_info_matpower.csv"
+  gen_info_matches: "analysis/io/inputs/from_previous_study/gen_info_matches.csv"
+  gen_info_ramp: "analysis/io/inputs/ramp_rates/gen_info_ramp.xlsx"
   eia_raw: "analysis/io/inputs/eia_thermoelectric_water_use"
   eia_heat_rates: "analysis/io/inputs/eia_heat_rates/Table_A6_Approximate_Heat_Rates_for_Electricity_-_and_Heat_Content_of_Electricity.xlsx"
   noaa_temperature_data: "analysis/io/inputs/noaa_air_temperature/CRNH0203-2019-IL_Champaign_9_SW.txt"
   noaa_temperature_headers: "analysis/io/inputs/noaa_air_temperature/headers.txt"
   usgs_temperature_data: "analysis/io/inputs/usgs_water_temperature/05558300.txt"
   miso_load: "analysis/io/inputs/miso_load_data/20190101-20200101 MISO Forecasted Cleared & Actual Load.csv"
-  gen_ramp: "analysis/io/inputs/ramp_rates/gen_ramp.xlsx"
+  
 
 outputs:
-  case: "analysis/io/outputs/synthetic_grid/case.p"
-  case_match: "analysis/io/outputs/synthetic_grid/case_match.p"
-  eia: "analysis/io/outputs/eia_thermoelectric_water_use/EIA.h5"
   gen_info_water: "analysis/io/outputs/synthetic_grid/gen_info_water.csv"
-  df_air_water: "analysis/io/outputs/exogenous/air_water.csv"
-  temperatures: "analysis/io/outputs/figures/temperatures.pdf"
-  df_system_load: "analysis/io/outputs/exogenous/system_load.csv"
+  gen_info_water_ramp: "analysis/io/outputs/synthetic_grid/gen_info_water_ramp.csv"
+  air_water: "analysis/io/outputs/exogenous/air_water.csv"
+  system_load: "analysis/io/outputs/exogenous/system_load.csv"
+  node_load: "analysis/io/outputs/exogenous/node_load.csv"
+  gen_info_pm: "analysis/io/outputs/synthetic_grid/gen_info_pm.csv"
+  no_water_weights: "analysis/io/outputs/states/df_no_water_weights.csv"
+  water_weights: "analysis/io/outputs/states/df_water_weights.csv"
+
+figures:
   system_load: "analysis/io/outputs/figures/system_load.pdf"
-  df_node_load: "analysis/io/outputs/exogenous/node_load.csv"
   node_load: "analysis/io/outputs/figures/node_load.pdf"
-  df_gen_info_pm: "analysis/io/outputs/synthetic_grid/gen_info_pm.csv"
-
-  df_no_water_weights: "analysis/io/outputs/states/df_no_water_weights.csv"
   no_water_weights: "analysis/io/outputs/figures/no_water_weights.pdf"
-
-  df_water_weights: "analysis/io/outputs/states/df_water_weights.csv"
   water_weights: "analysis/io/outputs/figures/water_weights.pdf"
-
+  temperatures: "analysis/io/outputs/figures/temperatures.pdf"
