Ignore synthetic grid inputs

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-analysis/io/inputs/ACTIVSg200** linguist-generated=true
+analysis/io/inputs/ACTIVSg200* linguist-generated=true
 *.m linguist-generated=true
