--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -25,7 +25,9 @@ outputs:
   hour_to_hour: "analysis/io/outputs/exogenous/hour_to_hour.csv"
   gen_info_pm: "analysis/io/outputs/synthetic_grid/gen_info_pm.csv"
   no_water_weights: "analysis/io/outputs/states/no_water_weights.csv"
+  obj_no_water_weights: "analysis/io/outputs/objectives/obj_no_water_weights.csv"
   with_water_weights: "analysis/io/outputs/states/with_water_weights.csv"
+  obj_with_water_weights: "analysis/io/outputs/objectives/obj_with_water_weights.csv"
 
   figures:
     system_load: "analysis/io/outputs/figures/system_load.pdf"
