--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -10,6 +10,7 @@ inputs:
   usgs_temperature_data: "analysis/io/inputs/usgs_water_temperature/05558300.txt"
   miso_load: "analysis/io/inputs/miso_load_data/20190101-20200101 MISO Forecasted Cleared & Actual Load.csv"
   synthetic_node_loads: "analysis/io/inputs/ACTIVSg_Time_Series/ACTIVISg2000_load_time_series_MW.csv"
+  simulation_config: "analysis/io/inputs/simulation_configs/configs.csv"
   
   testing:
     no_load: "analysis/io/inputs/testing/no_load.csv"
@@ -24,10 +25,6 @@ outputs:
   node_load: "analysis/io/outputs/exogenous/node_load.csv"
   hour_to_hour: "analysis/io/outputs/exogenous/hour_to_hour.csv"
   gen_info_pm: "analysis/io/outputs/synthetic_grid/gen_info_pm.csv"
-  no_water_weights: "analysis/io/outputs/states/no_water_weights.csv"
-  obj_no_water_weights: "analysis/io/outputs/objectives/obj_no_water_weights.csv"
-  with_water_weights: "analysis/io/outputs/states/with_water_weights.csv"
-  obj_with_water_weights: "analysis/io/outputs/objectives/obj_with_water_weights.csv"
 
   figures:
     system_load: "analysis/io/outputs/figures/system_load.pdf"
