--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -34,4 +34,5 @@ outputs:
     node_load: "analysis/io/outputs/figures/node_load.pdf"
     hour_node_load: "analysis/io/outputs/figures/hour_node_load.pdf"
     temperatures: "analysis/io/outputs/figures/temperatures.pdf"
+    normal_parallel: "analysis/io/outputs/figures/normal_parallel.pdf"
 
