No Nuclear parallel plot

--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -35,4 +35,5 @@ outputs:
     hour_node_load: "analysis/io/outputs/figures/hour_node_load.pdf"
     temperatures: "analysis/io/outputs/figures/temperatures.pdf"
     normal_parallel: "analysis/io/outputs/figures/normal_parallel.pdf"
+    no_nuclear_parallel: "analysis/io/outputs/figures/no_nuclear_parallel.pdf"
 
