--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -36,4 +36,5 @@ outputs:
     temperatures: "analysis/io/outputs/figures/temperatures.pdf"
     normal_parallel: "analysis/io/outputs/figures/normal_parallel.pdf"
     no_nuclear_parallel: "analysis/io/outputs/figures/no_nuclear_parallel.pdf"
+    normal_output: "analysis/io/outputs/figures/normal_output.pdf"
 
