--- a/analysis/Project.toml
+++ b/analysis/Project.toml
@@ -5,3 +5,6 @@ Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 MOCOT = "5c3fdc54-6994-4d60-92ef-82aee31cdcaf"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+
+[compat]
+julia = "1.6, 1.7"
