--- a/src/julia/MOCOT/Project.toml
+++ b/src/julia/MOCOT/Project.toml
@@ -13,3 +13,6 @@ PowerModels = "c36e90e8-916a-50a6-bd94-075b64ef4655"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
+
+[compat]
+julia = "1.6, 1.7"
