--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -29,6 +29,7 @@ outputs:
   hour_to_hour: "analysis/io/outputs/exogenous/hour_to_hour.csv"
   dec_exog: "analysis/io/outputs/decisions_exogenous/dec_exog.csv"
   gen_info_pm: "analysis/io/outputs/synthetic_grid/gen_info_pm.csv"
+  states: "analysis/io/outputs/states/"
   power_states: "analysis/io/outputs/states/power_states.csv"
   discharge_violation_states: "analysis/io/outputs/states/discharge_violation_states.csv"
   objectives: "analysis/io/outputs/objectives/objectives.csv"
