Paramet names in txt files imported

--- a/analysis/paths.yml
+++ b/analysis/paths.yml
@@ -12,6 +12,8 @@ inputs:
   usgs_temperature_data: "analysis/io/inputs/usgs_water_temperature/05558300.txt"
   miso_load: "analysis/io/inputs/miso_load_data/20190101-20200101 MISO Forecasted Cleared & Actual Load.csv"
   synthetic_node_loads: "analysis/io/inputs/ACTIVSg_Time_Series/ACTIVISg2000_load_time_series_MW.csv"
+  decisions: "analysis/io/inputs/parameters/decisions.txt"
+  objectives: "analysis/io/inputs/parameters/objectives.txt"
   
   testing:
     no_load: "analysis/io/inputs/testing/no_load.csv"
