--- a/src/julia/MOCOT/Project.toml
+++ b/src/julia/MOCOT/Project.toml
@@ -15,4 +15,4 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
-julia = "1.6, 1.7"
+julia = "1.6, 1.7, 1.8"
