Analysis ported into julia package instead of script

--- a/analysis/Project.toml
+++ b/analysis/Project.toml
@@ -1,3 +1,8 @@
+name = "analysis"
+uuid = "f06a73d7-2cf0-45a2-979a-727312e06f22"
+authors = ["Jacob Kravits <49840473+kravitsjacob@users.noreply.github.com>"]
+version = "0.0.13"
+
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
