Add dates dependency

--- a/analysis/Project.toml
+++ b/analysis/Project.toml
@@ -6,6 +6,7 @@ version = "0.0.13"
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Infiltrator = "5903a43b-9cc3-4c30-8d17-598619ec4e9b"
 MOCOT = "5c3fdc54-6994-4d60-92ef-82aee31cdcaf"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
