Debugging version of C simulation

--- a/analysis/makefile
+++ b/analysis/makefile
@@ -1,4 +1,5 @@
 MPICC = mpicc
+GCC = gcc
 CFLAGS = -O3
 LIBS = -lm
 JULIAPATH = /bin/julia/julia-1.8.1
@@ -8,6 +9,9 @@ JULIAFLAGS_SLURM = -I$(JULIAPATH_SLURM)/include/julia -L$(JULIAPATH_SLURM)/lib -
 
 compile:
 	$(MPICC) $(CFLAGS) -o main.exe main.c borg_src/borgms.c borg_src/mt19937ar.c $(LIBS) $(JULIAFLAGS)
+
+serial:
+	$(GCC) $(CFLAGS) -o main.exe main.c borg_src/borg.c borg_src/mt19937ar.c $(LIBS) $(JULIAFLAGS)
 
 slurm: 
 	$(MPICC) $(CFLAGS) -o main.exe main.c borg_src/borgms.c borg_src/mt19937ar.c $(LIBS) $(JULIAFLAGS_SLURM)
