make single_simulation script in C for dev

--- a/analysis/makefile
+++ b/analysis/makefile
@@ -10,8 +10,8 @@ JULIAFLAGS_SLURM = -I$(JULIAPATH_SLURM)/include/julia -L$(JULIAPATH_SLURM)/lib -
 compile:
 	$(MPICC) $(CFLAGS) -o main.exe main.c borg_src/borgms.c borg_src/mt19937ar.c $(LIBS) $(JULIAFLAGS)
 
-serial:
-	$(GCC) $(CFLAGS) -o main.exe main.c borg_src/borg.c borg_src/mt19937ar.c $(LIBS) $(JULIAFLAGS)
+single:
+	$(GCC) $(CFLAGS) -o single_simulation.exe single_simulation.c $(LIBS) $(JULIAFLAGS)
 
 slurm: 
 	$(MPICC) $(CFLAGS) -o main.exe main.c borg_src/borgms.c borg_src/mt19937ar.c $(LIBS) $(JULIAFLAGS_SLURM)
