--- a/paths.yml
+++ b/paths.yml
@@ -13,12 +13,10 @@ inputs:
   
   # Exogenous paramters
   air_temperature_dir: "io/inputs/air_temperature"
-
-  noaa_temperature_data: "io/inputs/noaa_air_temperature/CRNH0203-2019-IL_Champaign_9_SW.txt"
-  noaa_temperature_headers: "io/inputs/noaa_air_temperature/headers.txt"
-  usgs_temperature_data: "io/inputs/usgs_water_temperature/05558300.txt"
-  miso_load: "io/inputs/miso_load_data/20190101-20200101 MISO Forecasted Cleared & Actual Load.csv"
   synthetic_node_loads: "io/inputs/ACTIVSg_Time_Series/ACTIVISg2000_load_time_series_MW.csv"
+  
+  miso_load: "io/inputs/miso_load_data/20190101-20200101 MISO Forecasted Cleared & Actual Load.csv"
+  # Parameter names
   decisions: "io/inputs/parameters/decisions.txt"
   objectives: "io/inputs/parameters/objectives.txt"
   
