--- a/simulation/src/MOCOT/Project.toml
+++ b/simulation/src/MOCOT/Project.toml
@@ -1,7 +1,7 @@
 name = "MOCOT"
 uuid = "5c3fdc54-6994-4d60-92ef-82aee31cdcaf"
 authors = ["kravitsjacob <kravitsjacob@gmail.com>"]
-version = "0.0.14"
+version = "0.0.15"
 
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -19,4 +19,4 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-julia = "1.6, 1.7, 1.8"
+julia = "1.7, 1.8"
