nevermind, Remove optimziation flag

--- a/optimization/makefile
+++ b/optimization/makefile
@@ -8,7 +8,7 @@ JULIAPATH_SLURM = /curc/sw/julia/1.8.1
 JULIAFLAGS_SLURM = -I$(JULIAPATH_SLURM)/include/julia -L$(JULIAPATH_SLURM)/lib -Wl,-rpath,$(JULIAPATH_SLURM)/lib -ljulia
 
 single:
-	$(GCC) $(CFLAGS) -o single_simulation.exe single_simulation.c src/wrappers.c $(JULIAFLAGS)
+	$(GCC) -o single_simulation.exe single_simulation.c src/wrappers.c $(JULIAFLAGS)
 
 optimization:
 	$(MPICC) $(CFLAGS) -o optimization.exe optimization.c src/wrappers.c src/borg/borgms.c src/borg/mt19937ar.c $(LIBS) $(JULIAFLAGS)
