--- a/paths.yml
+++ b/paths.yml
@@ -58,6 +58,7 @@ outputs:
   # Results
   runtime_1: "io/outputs/states/scenario_1_runtime.txt"
   runtime_template: "io/outputs/states/scenario_0_runtime.txt"
+  judgement_policies: "io/outputs/selected_policies/judegment_policies.csv"
   selected_policies: "io/outputs/selected_policies/selected_policies.csv"
   selected_policy_performance: "io/outputs/selected_policies/selected_policy_performance.csv"
 
